# dag-toolkit

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md  known-servers.json  pyproject.toml  scan-servers.sh  state-codestorm.json
examples/: ANOMALIES.md  dag-DGMOlu0bsNLoPM7HTY-CRWUq1a1w0wUX_F13mwkYHr0-v12-0.dot  local-dag-DGMOlu0bsNLoPM7HTY-CRWUq1a1w0wUX_F13mwkYHr0-v12-wombatx.me-d1-47.dot  local-dag-DGMOlu0bsNLoPM7HTY-CRWUq1a1w0wUX_F13mwkYHr0-v12-wombatx.me-d1-48.dot  local-dag-c10y-fNiMx5ijtgGFibzPUfNs9hpQvnJYPTV-fD2KPk-v12-wombatx.me-d76750-76805.dot  local-dag-gAIaCvcVNzkYwHuHNQ_matrix.org-v10-wombatx.me-d1-628_1-628.dot  local-dag-ylRY10DiOcgVxCi0W8f9ztanFl5wdBxYCWQqM45n_Kk-v12-nutra.tk-d1-3236.dot  remote-dag-c10y-fNiMx5ijtgGFibzPUfNs9hpQvnJYPTV-fD2KPk-v12-explodie.org-d76750-76806.dot  remote-dag-c10y-t1HZB9jgYr9mmaKtMDsS19HXbWRFc6d0bWGVYU-v12-31a05b.net-d5100-5250-deep.dot  remote-dag-c10y-t1HZB9jgYr9mmaKtMDsS19HXbWRFc6d0bWGVYU-v12-31a05b.net-d5100-5250-hl-julian-shane.dot  remote-dag-c10y-t1HZB9jgYr9mmaKtMDsS19HXbWRFc6d0bWGVYU-v12-31a05b.net-d5160-5180.dot  remote-dag-c10y-t1HZB9jgYr9mmaKtMDsS19HXbWRFc6d0bWGVYU-v12-31a05b.net-trace-julian-shane.dot  remote-dag-gAIaCvcVNzkYwHuHNQ_matrix.org-v10-matrix.org-d130-628.dot  remote-dag-tgmfqAWaBc978M80V9_nutra.tk-v11-merged.dot  remote-dag-tgmfqAWaBc978M80V9_nutra.tk-v11-merged_815-831_hl_bot_catgirl.dot
src/: analyzer.cpp  analyzer.hpp  display.cpp  display.hpp  event.hpp  jsonl_reader.cpp  jsonl_reader.hpp  main.cpp  ruma_runner.cpp  ruma_runner.hpp  server_report.hpp
storms/: dag_48385-48400_fb20_ff4_hl_jeroen_ggdev.dot  storm_01_d22840_bf8.dot  storm_01_d4933_bf5.dot  storm_01_d7854_bf20.dot  storm_02_d13242_bf20.dot  storm_02_d43351_bf3.dot  storm_02_d4979_bf5.dot  storm_02_d54581_bf3.dot  storm_03_d14048_bf20.dot  storm_03_d24855_bf10.dot  storm_03_d4797_bf5.dot  storm_03_d53106_bf3.dot  storm_04_d19043_bf20.dot  storm_04_d385_bf4.dot  storm_04_d5100_bf5.dot  storm_05_d24637_bf20.dot  storm_05_d4820_bf4.dot  (+11 more)
(+15 files in other folders)
